# crossnzb

./: .gitignore  CMakeLists.txt  README.md
src/: config.json  main.cpp  resource.h  resource.rc
src/NNTP/: NNTPClient.cpp  NNTPClient.h
